--- a/app/src/main/res/layout/carinfo_listview_item.xml
+++ b/app/src/main/res/layout/carinfo_listview_item.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_marginLeft="5dp"
+    android:background="@color/color_carView_mainMesage"
     android:layout_marginBottom="8dp"
     android:layout_height="match_parent">
 
@@ -16,7 +17,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp" />
     <TextView
-        android:id="@+id/carinfo_item_carID"
+        android:id="@+id/carinfo_item_carId"
         android:layout_toRightOf="@+id/carInfo_item_carImage"
         android:text="车牌 : null"
         android:textSize="20sp"
@@ -27,7 +28,7 @@
     <TextView
         android:id="@+id/carinfo_item_carName"
         android:layout_toRightOf="@+id/carInfo_item_carImage"
-        android:layout_below="@+id/carinfo_item_carID"
+        android:layout_below="@+id/carinfo_item_carId"
         android:text="车名 : null"
         android:textSize="20sp"
         android:gravity="center_vertical"
