--- a/app/src/main/res/layout/item_gasstionlist.xml
+++ b/app/src/main/res/layout/item_gasstionlist.xml
@@ -5,10 +5,10 @@
     android:paddingRight="10dp"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
+    android:background="@color/color_carView_mainMesage"
     android:layout_height="match_parent">
 
     <!--加油站列表项-->
-
     <ImageView
         android:id="@+id/gasSattion_Item_Icon"
         android:layout_width="0dp"
@@ -46,8 +46,6 @@
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="30dp" />
-
-
     </LinearLayout>
 
     <!--距离-->
