--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -83,4 +83,26 @@
         <item name="android:minHeight">20dip</item>
         <item name="android:maxHeight">20dip</item>
     </style>
+
+    <!--车辆信息的输入框样式-->
+    <style name="addCarInput_noline">
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@null</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:layout_marginLeft">3dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+    </style>
+    <!--车辆信息的显示框-->
+    <style name="addCarInput_text">
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">center|right</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textColor">@color/colorFont</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
