更新高德地图的使用
接上了更改密码好新人手机号

--- a/app/src/main/res/layout/activity_navi_map_view.xml
+++ b/app/src/main/res/layout/activity_navi_map_view.xml
@@ -3,10 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.amap.api.maps.MapView
+    <com.amap.api.navi.AMapNaviView
+        android:id="@+id/navi_map_View_activity"
         android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:id="@+id/location_mapView"/>
-
+        android:layout_width="match_parent" />
 
 </LinearLayout>
