--- a/app/src/main/res/layout/fragment_navi.xml
+++ b/app/src/main/res/layout/fragment_navi.xml
@@ -1,32 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <com.amap.api.maps.MapView
+        android:id="@+id/navi_mapView"
+        android:clickable="true"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
+    <!--搜索栏-->
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="5dp"
+        android:background="@color/color_carView_background_tran"
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+        <EditText
+            android:id="@+id/navi_mapView_search_edit"
+            android:hint="请输入终点地址"
+            android:paddingLeft="10dp"
+            android:drawableRight="@drawable/ic_detele"
+            android:paddingRight="10dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+
+        <Button
+            android:id="@+id/navi_mapView_search_btn"
+            android:background="@drawable/ic_secher"
+            android:layout_width="50dp"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
+
     <!--导航-->
-
-    <Button
-        android:id="@+id/wgsNaviBtn"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="国际经纬度坐标" />
+        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/gcjNaviBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="国测局坐标" />
+        <Button
+            android:id="@+id/navi_View_goButton"
+            android:text="到这里去"
+            android:background="@color/color_carView_background_tran"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/navi_View_BackButton"
+            android:text="从这里回"
+            android:layout_weight="1"
+            android:background="@color/color_carView_background_tran"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/bdmcNaviBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="百度墨卡托坐标" />
-
-    <Button
-        android:id="@+id/mDb06llNaviBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="百度经纬度坐标" />
-
-</LinearLayout>
+</RelativeLayout>
