--- a/app/src/main/res/layout/item_gasstionlist.xml
+++ b/app/src/main/res/layout/item_gasstionlist.xml
@@ -5,20 +5,23 @@
     android:paddingRight="10dp"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
+    android:gravity="center"
     android:background="@color/color_carView_mainMesage"
     android:layout_height="match_parent">
 
     <!--加油站列表项-->
     <ImageView
         android:id="@+id/gasSattion_Item_Icon"
-        android:layout_width="0dp"
-        android:layout_weight="2"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:src="@mipmap/ic_petrochina_station_icon"
+        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="2"
-        android:layout_height="match_parent">
+        android:layout_weight="3"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/gasSattion_Item_stationName"
@@ -26,8 +29,10 @@
             android:textStyle="bold"
             android:textColor="@color/color_back"
             android:layout_width="match_parent"
+            android:singleLine="true"
             android:layout_weight="1"
-            android:layout_height="30dp" />
+            android:text="未知"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/gasSattion_Item_stationType"
@@ -36,6 +41,7 @@
             android:singleLine="true"
             android:layout_width="match_parent"
             android:layout_weight="1"
+            android:text="未知"
             android:layout_height="30dp" />
 
         <TextView
@@ -43,6 +49,7 @@
             android:textSize="@dimen/SmallFontSize"
             android:textColor="@color/color_back"
             android:singleLine="true"
+            android:text="未知"
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="30dp" />
