ti jiao zhen liang tian geng gai de

--- a/app/src/main/res/layout/fragment_car_list_action.xml
+++ b/app/src/main/res/layout/fragment_car_list_action.xml
@@ -20,6 +20,7 @@
     <ListView
         android:id="@+id/carlist_myCar_ListView"
         android:layout_below="@+id/carInfo_carImage"
+        android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
