--- a/app/src/main/res/layout/carinfo_listview_item.xml
+++ b/app/src/main/res/layout/carinfo_listview_item.xml
@@ -1,45 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_marginLeft="4dp"
+    android:layout_height="120dp"
     android:gravity="center"
-    android:background="@color/colorWhite"
-    android:layout_marginBottom="13dp"
-    android:layout_height="80dp">
+    android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/carInfo_item_carImage"
-        android:layout_width="wrap_content"
-        android:gravity="center|left"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:src="@mipmap/user_head"
-        />
-    <TextView
-        android:id="@+id/carinfo_item_carId"
-        android:text="车牌 : null"
-        android:textSize="20sp"
-        android:layout_weight="1"
-        android:textColor="@color/color_back"
-        android:gravity="center_vertical|left"
-        android:layout_marginLeft="18dp"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:padding="5dp"
+            android:background="@drawable/corners_background"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/carinfo_item_carText"
-        android:layout_width="wrap_content"
-        android:visibility="gone"
-        android:layout_weight="1"
-        android:layout_height="match_parent" />
-    <View
-        android:id="@+id/carinfo_item_goIcon"
-        android:layout_width="50dp"
-        android:visibility="visible"
-        android:layout_marginRight="30dp"
-        android:background="@mipmap/ic_go_right_gree_icon"
-        android:layout_height="wrap_content"  />
+            <ImageView
+                android:id="@+id/carInfo_item_carImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:gravity="center|left"
+                android:src="@mipmap/user_head" />
 
+            <TextView
+                android:id="@+id/carinfo_item_carId"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingTop="5dp"
+                android:layout_marginLeft="5dp"
+                android:gravity="center_vertical|left|top"
+                android:text="车牌"
+                android:textColor="@color/color_gui"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/carinfo_item_car_Brand_Text"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center|left"
+                android:paddingLeft="10dp"
+                android:text="B1234567"
+                android:textSize="21sp"
+                android:textColor="@color/color_gui"
+                android:textStyle="bold" />
+        </LinearLayout>
 </LinearLayout>
