--- a/app/src/main/res/drawable/corners_blue_background.xml
+++ b/app/src/main/res/drawable/corners_blue_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#FFFFFF"/>
+    <solid android:color="@color/color_blue_background"/>
 
     <corners android:radius="10dp"/>
 
