--- a/app/src/main/res/layout/carinfo_listview_item.xml
+++ b/app/src/main/res/layout/carinfo_listview_item.xml
@@ -6,6 +6,7 @@
     android:orientation="horizontal">
 
         <LinearLayout
+            android:id="@+id/carinfo_listview_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="10dp"
@@ -13,7 +14,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
             android:padding="5dp"
-            android:background="@drawable/corners_background"
+            android:background="@drawable/corners_blue_background"
             android:orientation="horizontal">
 
             <ImageView
