--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,9 @@
     <color name="color_carView_background">#828B23</color>
     <color name="color_blue_dark">#31bff7</color>
 
+    <!--上导航栏的背景色-->
+    <color name="color_toolbar_background">#38393D</color>
+
     <!--Button-->
     <color name="color_submit_button">#10a68c</color>
 
