--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -11,7 +11,7 @@
         android:onClick="onFinish"
         android:padding="5dp"
         android:layout_margin="5dp"
-        android:background="@mipmap/ic_go_left_white"
+        android:background="@mipmap/ic_go_left_white_icon"
         android:layout_width="26dp"
         android:layout_marginLeft="10dp"
         android:layout_height="23dp" />
