--- a/app/src/main/res/layout/fragment_sumbit_indent.xml
+++ b/app/src/main/res/layout/fragment_sumbit_indent.xml
@@ -2,24 +2,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:miss="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/color_carView_mainMesage"
-    android:padding="10dp">
+    android:background="@color/color_blue_main">
 
+    <!--TODO-->
     <!--提交加油信息-->
-    <com.miss.imissyou.mycar.ui.RoundImageView
-        android:id="@+id/sumbitIndent_gasStation_ImageView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:src="@mipmap/user_head"
-        miss:Radiustype="round"
-        android:layout_height="0dp"
-        android:layout_weight="3" />
+        android:orientation="horizontal"
+        android:layout_height="200dp">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="@color/color_carView_mainMesage" />
+        <!--加油站的标题信息-->
+        <LinearLayout
+            android:layout_weight="4"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+        </LinearLayout>
+
+        <!--线-->
+        <View
+            android:layout_marginBottom="50dp"
+            android:layout_marginTop="50dp"
+            android:background="@color/color_back_gui"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"/>
+
+        <!--导航的标题-->
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_weight="2"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">\
+
+            <ImageView
+                android:id="@+id/sumbit_navi_toGastion_image"
+                android:layout_width="match_parent"
+                android:layout_weight="3"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="去这里"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
