--- a/app/src/main/res/layout/carinfo_listview_item.xml
+++ b/app/src/main/res/layout/carinfo_listview_item.xml
@@ -1,48 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="4dp"
+    android:layout_height="160dp"
     android:gravity="center"
-    android:padding="10dp"
-    android:id="@+id/car_list_item_carBackground"
-    android:background="@drawable/car_list_item"
-    android:backgroundTint="@color/color_blue_background"
-    android:layout_marginBottom="13dp"
-    android:layout_height="150dp">
+    android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/carInfo_item_carImage"
-            android:layout_width="wrap_content"
-            android:gravity="center|left"
-            android:layout_height="wrap_content"
+        <LinearLayout
+            android:id="@+id/car_list_item_carBackground"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:src="@mipmap/user_head" />
-        <TextView
-            android:text="车牌"
-            android:textSize="20sp"
-            android:gravity="center|left|top"
-            android:layout_marginLeft="4dp"
-            android:paddingTop="35dp"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-        <TextView
-            android:id="@+id/car_list_item_carbrand_text"
-            android:text="B134805"
-            android:gravity="center|left"
-            android:textSize="18sp"
-            android:layout_weight="3"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:padding="5dp"
+            android:background="@drawable/corners_blue_background"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/carinfo_item_carText"
-            android:layout_width="20dp"
-            android:visibility="visible"
-            android:layout_weight="1"
-            android:layout_height="match_parent" />
+                <ImageView
+                    android:id="@+id/car_list_item_carImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center|left"
+                    android:src="@mipmap/user_head" />
 
+                <TextView
+                    android:id="@+id/car_list_item_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingTop="35dp"
+                    android:layout_marginLeft="5dp"
+                    android:gravity="center_vertical|left|top"
+                    android:text="车牌"
+                    android:textColor="@color/color_gui"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/car_list_item_carbrand_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center|left"
+                    android:paddingLeft="10dp"
+                    android:text="B1234567"
+                    android:textSize="21sp"
+                    android:textColor="@color/color_gui"
+                    android:textStyle="bold" />
+        </LinearLayout>
 </LinearLayout>
