--- a/app/src/main/res/layout/activity_input_barnd_page.xml
+++ b/app/src/main/res/layout/activity_input_barnd_page.xml
@@ -6,20 +6,17 @@
     android:layout_height="match_parent">
     <!--输入车牌号的页面-->
 
-    <com.rey.material.app.ContactEditText
+    <com.rey.material.widget.EditText
         android:id="@+id/input_add_brand_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="40dp"
         android:hint="车牌号"
-        android:imeOptions="actionNext|flagNoEnterAction|flagNoExtractUi"
-        android:dropDownSelector="@drawable/abc_list_selector_background_transition_holo_light"
-        app:et_inputId="@+id/textfield_et_contact_input"
-        app:et_autoCompleteMode="multi"
-        app:et_supportMode="none"
-        app:cet_spanFontFamily="asset:FreeSans.ttf"
-        android:completionThreshold="2"
-        app:v_styleId="@array/edittext_contact"/>
+        app:et_labelTextSize="20sp"
+        app:et_supportMode="none" />
 
 
     <com.rey.material.widget.Button
@@ -27,6 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="36dp"
         android:text="下一步"
+        android:layout_alignParentBottom="true"
         android:background="@null" />
 
 </RelativeLayout>
