--- a/app/src/main/res/layout/item_gasstionlist.xml
+++ b/app/src/main/res/layout/item_gasstionlist.xml
@@ -1,71 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
-    android:gravity="center"
-    android:background="@color/color_carView_mainMesage"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="120dp"
+    android:layout_marginTop="20dp"
+    android:background="@color/colorWhite"
+    android:orientation="vertical">
 
-    <!--加油站列表项-->
-    <ImageView
-        android:id="@+id/gasSattion_Item_Icon"
-        android:layout_width="wrap_content"
-        android:layout_weight="1"
-        android:src="@mipmap/ic_petrochina_station_icon"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/gasSattion_Item_gasName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:paddingLeft="15dp"
+        android:text="中有茂昌恒港加油站"
+        android:textColor="@color/color_back"
+        android:textSize="20sp" />
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_weight="3"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:orientation="horizontal"
+        android:paddingLeft="15dp">
 
         <TextView
-            android:id="@+id/gasSattion_Item_stationName"
-            android:textSize="@dimen/FontSize"
-            android:textStyle="bold"
-            android:textColor="@color/color_back"
-            android:layout_width="match_parent"
+            android:id="@+id/gasSattion_Item_stationAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
             android:singleLine="true"
-            android:layout_weight="1"
             android:text="未知"
-            android:layout_height="wrap_content" />
+            android:textColor="@color/color_back_gui"
+            android:textSize="@dimen/FontSize" />
 
         <TextView
-            android:id="@+id/gasSattion_Item_stationType"
-            android:textSize="@dimen/SmallFontSize"
-            android:textColor="@color/color_back"
-            android:singleLine="true"
-            android:layout_width="match_parent"
+            android:id="@+id/gasSattion_Item_diatance"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="未知"
-            android:layout_height="30dp" />
+            android:gravity="center"
+            android:singleLine="true"
+            android:text="km"
+            android:textColor="@color/color_back"
+            android:textSize="@dimen/SmallFontSize" />
 
-        <TextView
-            android:id="@+id/gasSattion_Item_oilType"
-            android:textSize="@dimen/SmallFontSize"
-            android:textColor="@color/color_back"
-            android:singleLine="true"
-            android:text="未知"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="30dp" />
     </LinearLayout>
 
-    <!--距离-->
-    <TextView
-        android:id="@+id/gasSattion_Item_diatance"
-        android:text="公里"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:textColor="@color/color_back_gui"
-        android:textSize="@dimen/FontSize"
-        android:textStyle="bold"
-        android:layout_width="0dp"
-        android:layout_weight="2"
-        android:layout_height="match_parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_marginTop="15dp"
+        android:layout_height="30dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/gasSattion_Item_toNavi"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:drawableLeft="@mipmap/ic_location_big_gui_icon"
+            android:gravity="center|left"
+            android:paddingLeft="20dp"
+            android:text="到这里"
+            android:textColor="@color/color_back"
+            android:textSize="18sp" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/colorBackFont"
+            android:paddingBottom="15dp"
+            android:paddingTop="15dp" />
+
+        <TextView
+            android:id="@+id/gasSattion_Item_callPhone"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1.5"
+            android:drawableLeft="@mipmap/ic_call_phone_gui_icon"
+            android:gravity="center|left"
+            android:paddingLeft="20dp"
+            android:text="电话"
+            android:textColor="@color/color_back"
+            android:textSize="18sp" />
+    </LinearLayout>
+
 
 </LinearLayout>
