--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -3,13 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_gravity="center"
-
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <!--消息的Item-->
 
     <android.support.v7.widget.CardView
-        app:cardBackgroundColor="#353543"
+        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="10dp"
         android:layout_gravity="center"
         app:cardElevation="1dp"
@@ -22,51 +21,70 @@
         <LinearLayout
             android:orientation="vertical"
             android:id="@+id/message_item_background_color"
-            android:background="@color/color_activty_title"
+            android:background="@drawable/car_list_item"
             android:layout_width="match_parent"
+            android:paddingTop="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/message_item_title_text"
-                android:textSize="@dimen/BigFontSize"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:text="未知"
-                android:gravity="center"
-                android:paddingRight="20dp"
-                android:paddingLeft="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <View
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                style="@style/MissLineView"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"/>
-
-            <TextView
-                android:id="@+id/message_item_msg_text"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp"
-                android:textColor="@color/color_back"
-                android:text="消息"
-                style="@style/MissTextViweStyle"
+                android:text="车辆启动"
+                android:layout_marginBottom="5dp"
+                android:textColor="#000000"
                 android:gravity="center|left"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
             <View
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 style="@style/MissLineView"
+                android:background="#eeeeee"
                 android:layout_width="match_parent"
-                android:layout_height="2dp"/>
+                android:layout_height="1dp"/>
+
             <TextView
-                android:id="@+id/message_item_time_text"
+                android:id="@+id/message_item_msg_text"
                 android:paddingRight="20dp"
                 android:paddingLeft="20dp"
+                android:layout_marginTop="15dp"
+                android:textColor="@color/color_back"
+                android:text="消息"
+                android:textSize="14sp"
+                style="@style/MissTextViweStyle"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <!--对应的操作-->
+            <TextView
+                android:id="@+id/message_item_stateTask"
+                android:textSize="12sp"
+                android:textColor="#0E6C9C"
+                android:layout_marginTop="5dp"
                 android:gravity="center|right"
+                android:text="附近加油站"
+                android:layout_marginBottom="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+            <View
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                style="@style/MissLineView"
+                android:background="#eeeeee"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
+            <TextView
+                android:id="@+id/message_item_time_text"
+                android:gravity="center|right"
+                android:textColor="#000000"
+                android:layout_marginBottom="10dp"
                 android:textSize="@dimen/SmallFontSize"
-                android:text="时间"
+                android:text="20165-6-6 13:16:25"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
